# Graphlux

./: .gitignore  AGENT.md  AGENTS.md  README.md  README_GUI.md  build.bat  conversation-2026-04-10-001451.txt  gemini.md  main_gui.py  patch.diff  verify_editor.py
.Jules/: palette.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .gitignore  README.md  cyberhamster.db  pyproject.toml  run.py  run_gui.py
backend/cyberhamster/: __init__.py  api.py  db.py  models.py  task_manager.py
backend/cyberhamster/engine/: context.py  executor.py  nodes.py
backend/cyberhamster/tools/: exiftool_wrapper.py  ffmpeg_wrapper.py  imagemagick_wrapper.py  pyexiv2_wrapper.py
backend/graphlux/: __init__.py  api.py  db.py  logger.py  models.py  task_manager.py
backend/graphlux/engine/: __init__.py  context.py  executor.py  nodes.py
backend/graphlux/tools/: ffmpeg_wrapper.py  imagemagick_wrapper.py  pyexiv2_wrapper.py
backend/scripts/: build.py  nuitka_package.yml  process_emoji.py
backend/tests/: test_call_task_node.py  test_engine.py  test_pyexiv2_wrapper.py  test_scenario_1.py  test_scenario_2.py  test_skip_execution.py  test_tools.py
doc/: ai_initial_doc.md
frontend/: .prettierrc  angular.json  gemini.md  package-lock.json  package.json  pnpm-lock.yaml  proxy.conf.json  transloco.config.ts  tsconfig.spec.json
frontend/public/i18n/: en.json  zh.json
frontend/src/: custom-zorro.less  index.html  styles.scss
frontend/src/app/: api.service.ts  app.component.ts  app.config.ts  app.routes.ts  app.spec.ts  app.ts  shared-imports.ts  test-shared.ts
(+108 files in other folders)
